--- a/main.ipynb
+++ b/main.ipynb
@@ -3849,7 +3849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 57,
    "id": "95c99052",
    "metadata": {},
    "outputs": [
@@ -3973,7 +3973,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>39360</th>\n",
+       "      <th>39352</th>\n",
        "      <td>U2600001</td>\n",
        "      <td>2/60COM+2/20OE*30COM-128*124-179.6-DOBBY(TOPBEAM)</td>\n",
        "      <td>2/60COM+2/20OE*30COM</td>\n",
@@ -3987,7 +3987,7 @@
        "      <td>128*124</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>39361</th>\n",
+       "      <th>39353</th>\n",
        "      <td>U2600002</td>\n",
        "      <td>2/60COM*30SPX+300D.PET-110*86-175.3-DOBBY</td>\n",
        "      <td>2/60COM*30SPX+300D.PET</td>\n",
@@ -4001,7 +4001,7 @@
        "      <td>110*86</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>39362</th>\n",
+       "      <th>39354</th>\n",
        "      <td>U2600003</td>\n",
        "      <td>2/60COM*30SPX+300D.PET-110*86-175.3-DOBBY</td>\n",
        "      <td>2/60COM*30SPX+300D.PET</td>\n",
@@ -4015,7 +4015,7 @@
        "      <td>110*86</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>39363</th>\n",
+       "      <th>39355</th>\n",
        "      <td>U2600004</td>\n",
        "      <td>2/60COM*30SPX+300D.PET-110*86-175.3-DOBBY</td>\n",
        "      <td>2/60COM*30SPX+300D.PET</td>\n",
@@ -4029,7 +4029,7 @@
        "      <td>110*86</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>39364</th>\n",
+       "      <th>39356</th>\n",
        "      <td>U2600005</td>\n",
        "      <td>2/60COM*30SPX+300D.PET-110*86-175.3-DOBBY</td>\n",
        "      <td>2/60COM*30SPX+300D.PET</td>\n",
@@ -4044,7 +4044,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>39365 rows × 11 columns</p>\n",
+       "<p>39357 rows × 11 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -4055,11 +4055,11 @@
        "3         10714                           7OE*6OE-68*38-165.1- 3/1   \n",
        "4         10750                      7OE*7OE-68*38-160-3/1,S TWILL   \n",
        "...         ...                                                ...   \n",
-       "39360  U2600001  2/60COM+2/20OE*30COM-128*124-179.6-DOBBY(TOPBEAM)   \n",
-       "39361  U2600002          2/60COM*30SPX+300D.PET-110*86-175.3-DOBBY   \n",
-       "39362  U2600003          2/60COM*30SPX+300D.PET-110*86-175.3-DOBBY   \n",
-       "39363  U2600004          2/60COM*30SPX+300D.PET-110*86-175.3-DOBBY   \n",
-       "39364  U2600005          2/60COM*30SPX+300D.PET-110*86-175.3-DOBBY   \n",
+       "39352  U2600001  2/60COM+2/20OE*30COM-128*124-179.6-DOBBY(TOPBEAM)   \n",
+       "39353  U2600002          2/60COM*30SPX+300D.PET-110*86-175.3-DOBBY   \n",
+       "39354  U2600003          2/60COM*30SPX+300D.PET-110*86-175.3-DOBBY   \n",
+       "39355  U2600004          2/60COM*30SPX+300D.PET-110*86-175.3-DOBBY   \n",
+       "39356  U2600005          2/60COM*30SPX+300D.PET-110*86-175.3-DOBBY   \n",
        "\n",
        "                    Warp*Weft  EPI*PPI  Width           Weave  GSM  \\\n",
        "0                     6OE*6OE    48*44  162.6        4/4 MATT  NaN   \n",
@@ -4068,11 +4068,11 @@
        "3                     7OE*6OE    68*38  165.1             3/1  NaN   \n",
        "4                     7OE*7OE    68*38    160     3/1,S TWILL  NaN   \n",
        "...                       ...      ...    ...             ...  ...   \n",
-       "39360    2/60COM+2/20OE*30COM  128*124  179.6  DOBBY(TOPBEAM)  NaN   \n",
-       "39361  2/60COM*30SPX+300D.PET   110*86  175.3           DOBBY  NaN   \n",
-       "39362  2/60COM*30SPX+300D.PET   110*86  175.3           DOBBY  NaN   \n",
-       "39363  2/60COM*30SPX+300D.PET   110*86  175.3           DOBBY  NaN   \n",
-       "39364  2/60COM*30SPX+300D.PET   110*86  175.3           DOBBY  NaN   \n",
+       "39352    2/60COM+2/20OE*30COM  128*124  179.6  DOBBY(TOPBEAM)  NaN   \n",
+       "39353  2/60COM*30SPX+300D.PET   110*86  175.3           DOBBY  NaN   \n",
+       "39354  2/60COM*30SPX+300D.PET   110*86  175.3           DOBBY  NaN   \n",
+       "39355  2/60COM*30SPX+300D.PET   110*86  175.3           DOBBY  NaN   \n",
+       "39356  2/60COM*30SPX+300D.PET   110*86  175.3           DOBBY  NaN   \n",
        "\n",
        "                 Warp            Weft               Warp-Weft  EPI-PPI  \n",
        "0                 6OE             6OE                 6OE*6OE    48*44  \n",
@@ -4081,16 +4081,16 @@
        "3                 7OE             6OE                 7OE*6OE    68*38  \n",
        "4                 7OE             7OE                 7OE*7OE    68*38  \n",
        "...               ...             ...                     ...      ...  \n",
-       "39360  2/60COM+2/20OE           30COM    2/60COM+2/20OE*30COM  128*124  \n",
-       "39361         2/60COM  30SPX+300D.PET  2/60COM*30SPX+300D.PET   110*86  \n",
-       "39362         2/60COM  30SPX+300D.PET  2/60COM*30SPX+300D.PET   110*86  \n",
-       "39363         2/60COM  30SPX+300D.PET  2/60COM*30SPX+300D.PET   110*86  \n",
-       "39364         2/60COM  30SPX+300D.PET  2/60COM*30SPX+300D.PET   110*86  \n",
+       "39352  2/60COM+2/20OE           30COM    2/60COM+2/20OE*30COM  128*124  \n",
+       "39353         2/60COM  30SPX+300D.PET  2/60COM*30SPX+300D.PET   110*86  \n",
+       "39354         2/60COM  30SPX+300D.PET  2/60COM*30SPX+300D.PET   110*86  \n",
+       "39355         2/60COM  30SPX+300D.PET  2/60COM*30SPX+300D.PET   110*86  \n",
+       "39356         2/60COM  30SPX+300D.PET  2/60COM*30SPX+300D.PET   110*86  \n",
        "\n",
-       "[39365 rows x 11 columns]"
+       "[39357 rows x 11 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4380,7 +4380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 58,
    "id": "fb6e8169",
    "metadata": {},
    "outputs": [
@@ -4504,7 +4504,21 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>37262</th>\n",
+       "      <th>37131</th>\n",
+       "      <td>C130M301</td>\n",
+       "      <td>30VORTEX.VIS*40LEA.LINEN-124*62-159.8-2/2,S TWILL</td>\n",
+       "      <td>30VORTEX.VIS*40LEA.LINEN</td>\n",
+       "      <td>124*62</td>\n",
+       "      <td>159.8</td>\n",
+       "      <td>2/2,S TWILL</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>30VORTEX.VIS</td>\n",
+       "      <td>40LEA.LINEN</td>\n",
+       "      <td>30VORTEX.VIS*40LEA.LINEN</td>\n",
+       "      <td>124*62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37254</th>\n",
        "      <td>C130M419</td>\n",
        "      <td>30VORTEX.VIS*30VORTEX.VIS-64*64-154.9-2/2 Z TWILL</td>\n",
        "      <td>30VORTEX.VIS*30VORTEX.VIS</td>\n",
@@ -4518,7 +4532,7 @@
        "      <td>64*64</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>37263</th>\n",
+       "      <th>37255</th>\n",
        "      <td>C130M419</td>\n",
        "      <td>30VORTEX.VIS*30VORTEX.VIS-64*64-154.9-2/2 Z TWILL</td>\n",
        "      <td>30VORTEX.VIS*30VORTEX.VIS</td>\n",
@@ -4532,7 +4546,7 @@
        "      <td>64*64</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>37335</th>\n",
+       "      <th>37327</th>\n",
        "      <td>C130M499</td>\n",
        "      <td>30VORTEX.VIS*20K.SPX-118*72-176-2/2 S TWILL</td>\n",
        "      <td>30VORTEX.VIS*20K.SPX</td>\n",
@@ -4546,21 +4560,7 @@
        "      <td>118*72</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>38335</th>\n",
-       "      <td>C160M464</td>\n",
-       "      <td>60COM*30VORTEX.VIS-176*100-161.3-3/1,S TWIL</td>\n",
-       "      <td>60COM*30VORTEX.VIS</td>\n",
-       "      <td>176*100</td>\n",
-       "      <td>161.3</td>\n",
-       "      <td>3/1,S TWIL</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>60COM</td>\n",
-       "      <td>30VORTEX.VIS</td>\n",
-       "      <td>60COM*30VORTEX.VIS</td>\n",
-       "      <td>176*100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39073</th>\n",
+       "      <th>39065</th>\n",
        "      <td>U1160005</td>\n",
        "      <td>16VORTEX.CVC*300D.PET(CM800)-81*50-190.5-2/1,S...</td>\n",
        "      <td>16VORTEX.CVC*300D.PET(CM800)</td>\n",
@@ -4575,7 +4575,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>312 rows × 11 columns</p>\n",
+       "<p>189 rows × 11 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -4586,48 +4586,48 @@
        "117       11504            15VORTEX*15VORTEX-79*56-166.1-2/1 TWILL   \n",
        "278       12615              26VORTEX*15PC-88*58-185.4-2/1 Z TWILL   \n",
        "...         ...                                                ...   \n",
-       "37262  C130M419  30VORTEX.VIS*30VORTEX.VIS-64*64-154.9-2/2 Z TWILL   \n",
-       "37263  C130M419  30VORTEX.VIS*30VORTEX.VIS-64*64-154.9-2/2 Z TWILL   \n",
-       "37335  C130M499        30VORTEX.VIS*20K.SPX-118*72-176-2/2 S TWILL   \n",
-       "38335  C160M464        60COM*30VORTEX.VIS-176*100-161.3-3/1,S TWIL   \n",
-       "39073  U1160005  16VORTEX.CVC*300D.PET(CM800)-81*50-190.5-2/1,S...   \n",
+       "37131  C130M301  30VORTEX.VIS*40LEA.LINEN-124*62-159.8-2/2,S TWILL   \n",
+       "37254  C130M419  30VORTEX.VIS*30VORTEX.VIS-64*64-154.9-2/2 Z TWILL   \n",
+       "37255  C130M419  30VORTEX.VIS*30VORTEX.VIS-64*64-154.9-2/2 Z TWILL   \n",
+       "37327  C130M499        30VORTEX.VIS*20K.SPX-118*72-176-2/2 S TWILL   \n",
+       "39065  U1160005  16VORTEX.CVC*300D.PET(CM800)-81*50-190.5-2/1,S...   \n",
        "\n",
-       "                          Warp*Weft  EPI*PPI  Width        Weave  GSM  \\\n",
-       "62          14VORTEX.PC*14VORTEX.PC    81*50  161.9  2/1 S TWILL  NaN   \n",
-       "76      14C.VORTEX.PC*14C.VORTEX.PC    81*50  161.1  2/1,S TWILL  NaN   \n",
-       "83               14VORTEX.PC*10K.PC    99*50  162.3  3/1,S TWILL  NaN   \n",
-       "117               15VORTEX*15VORTEX    79*56  166.1    2/1 TWILL  NaN   \n",
-       "278                   26VORTEX*15PC    88*58  185.4  2/1 Z TWILL  NaN   \n",
-       "...                             ...      ...    ...          ...  ...   \n",
-       "37262     30VORTEX.VIS*30VORTEX.VIS    64*64  154.9  2/2 Z TWILL  NaN   \n",
-       "37263     30VORTEX.VIS*30VORTEX.VIS    64*64  154.9  2/2 Z TWILL  NaN   \n",
-       "37335          30VORTEX.VIS*20K.SPX   118*72    176  2/2 S TWILL  NaN   \n",
-       "38335            60COM*30VORTEX.VIS  176*100  161.3   3/1,S TWIL  NaN   \n",
-       "39073  16VORTEX.CVC*300D.PET(CM800)    81*50  190.5  2/1,S TWILL  NaN   \n",
+       "                          Warp*Weft EPI*PPI  Width        Weave  GSM  \\\n",
+       "62          14VORTEX.PC*14VORTEX.PC   81*50  161.9  2/1 S TWILL  NaN   \n",
+       "76      14C.VORTEX.PC*14C.VORTEX.PC   81*50  161.1  2/1,S TWILL  NaN   \n",
+       "83               14VORTEX.PC*10K.PC   99*50  162.3  3/1,S TWILL  NaN   \n",
+       "117               15VORTEX*15VORTEX   79*56  166.1    2/1 TWILL  NaN   \n",
+       "278                   26VORTEX*15PC   88*58  185.4  2/1 Z TWILL  NaN   \n",
+       "...                             ...     ...    ...          ...  ...   \n",
+       "37131      30VORTEX.VIS*40LEA.LINEN  124*62  159.8  2/2,S TWILL  NaN   \n",
+       "37254     30VORTEX.VIS*30VORTEX.VIS   64*64  154.9  2/2 Z TWILL  NaN   \n",
+       "37255     30VORTEX.VIS*30VORTEX.VIS   64*64  154.9  2/2 Z TWILL  NaN   \n",
+       "37327          30VORTEX.VIS*20K.SPX  118*72    176  2/2 S TWILL  NaN   \n",
+       "39065  16VORTEX.CVC*300D.PET(CM800)   81*50  190.5  2/1,S TWILL  NaN   \n",
        "\n",
-       "                Warp             Weft                     Warp-Weft  EPI-PPI  \n",
-       "62       14VORTEX.PC      14VORTEX.PC       14VORTEX.PC*14VORTEX.PC    81*50  \n",
-       "76     14C.VORTEX.PC    14C.VORTEX.PC   14C.VORTEX.PC*14C.VORTEX.PC    81*50  \n",
-       "83       14VORTEX.PC           10K.PC            14VORTEX.PC*10K.PC    99*50  \n",
-       "117         15VORTEX         15VORTEX             15VORTEX*15VORTEX    79*56  \n",
-       "278         26VORTEX             15PC                 26VORTEX*15PC    88*58  \n",
-       "...              ...              ...                           ...      ...  \n",
-       "37262   30VORTEX.VIS     30VORTEX.VIS     30VORTEX.VIS*30VORTEX.VIS    64*64  \n",
-       "37263   30VORTEX.VIS     30VORTEX.VIS     30VORTEX.VIS*30VORTEX.VIS    64*64  \n",
-       "37335   30VORTEX.VIS          20K.SPX          30VORTEX.VIS*20K.SPX   118*72  \n",
-       "38335          60COM     30VORTEX.VIS            60COM*30VORTEX.VIS  176*100  \n",
-       "39073   16VORTEX.CVC  300D.PET(CM800)  16VORTEX.CVC*300D.PET(CM800)    81*50  \n",
+       "                Warp             Weft                     Warp-Weft EPI-PPI  \n",
+       "62       14VORTEX.PC      14VORTEX.PC       14VORTEX.PC*14VORTEX.PC   81*50  \n",
+       "76     14C.VORTEX.PC    14C.VORTEX.PC   14C.VORTEX.PC*14C.VORTEX.PC   81*50  \n",
+       "83       14VORTEX.PC           10K.PC            14VORTEX.PC*10K.PC   99*50  \n",
+       "117         15VORTEX         15VORTEX             15VORTEX*15VORTEX   79*56  \n",
+       "278         26VORTEX             15PC                 26VORTEX*15PC   88*58  \n",
+       "...              ...              ...                           ...     ...  \n",
+       "37131   30VORTEX.VIS      40LEA.LINEN      30VORTEX.VIS*40LEA.LINEN  124*62  \n",
+       "37254   30VORTEX.VIS     30VORTEX.VIS     30VORTEX.VIS*30VORTEX.VIS   64*64  \n",
+       "37255   30VORTEX.VIS     30VORTEX.VIS     30VORTEX.VIS*30VORTEX.VIS   64*64  \n",
+       "37327   30VORTEX.VIS          20K.SPX          30VORTEX.VIS*20K.SPX  118*72  \n",
+       "39065   16VORTEX.CVC  300D.PET(CM800)  16VORTEX.CVC*300D.PET(CM800)   81*50  \n",
        "\n",
-       "[312 rows x 11 columns]"
+       "[189 rows x 11 columns]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "selection_df = art_df[art_df['Construction'].str.contains('VOR', regex=False)]\n",
+    "selection_df = art_df[art_df['Warp'].str.contains('VOR', regex=False)]\n",
     "selection_df"
    ]
   },
