gsm extract test

--- a/main.ipynb
+++ b/main.ipynb
@@ -5291,7 +5291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 88,
    "id": "504e028f",
    "metadata": {},
    "outputs": [
@@ -5336,7 +5336,7 @@
        "      <td>146</td>\n",
        "      <td>2/2HBT</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>256</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -5347,7 +5347,7 @@
        "      <td>149</td>\n",
        "      <td>2/2 HBT</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>365</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -5358,7 +5358,7 @@
        "      <td>144</td>\n",
        "      <td>3/1 S TWILL</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>320</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -5369,7 +5369,7 @@
        "      <td>144</td>\n",
        "      <td>3/1 S TWILL</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>320</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -5380,7 +5380,7 @@
        "      <td>144</td>\n",
        "      <td>3/1 S TWILL</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>320</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -5468,11 +5468,11 @@
        "93993  U2400004           40/2R*20SPX-90*70-154.2-DOBBY      40/2R*20SPX   \n",
        "\n",
        "      epi-ppi   width        weave  gsm  GSM  \n",
-       "0       68*64     146       2/2HBT  NaN  NaN  \n",
-       "1       80*58     149      2/2 HBT  NaN  NaN  \n",
-       "2       79*56     144  3/1 S TWILL  NaN  NaN  \n",
-       "3       79*56     144  3/1 S TWILL  NaN  NaN  \n",
-       "4       79*56     144  3/1 S TWILL  NaN  NaN  \n",
+       "0       68*64     146       2/2HBT  NaN  256  \n",
+       "1       80*58     149      2/2 HBT  NaN  365  \n",
+       "2       79*56     144  3/1 S TWILL  NaN  320  \n",
+       "3       79*56     144  3/1 S TWILL  NaN  320  \n",
+       "4       79*56     144  3/1 S TWILL  NaN  320  \n",
        "...       ...     ...          ...  ...  ...  \n",
        "93989  100*82  173.12    2/2 TWILL  NaN  NaN  \n",
        "93990  100*82  173.12    2/2 TWILL  NaN  NaN  \n",
@@ -5483,13 +5483,13 @@
        "[93994 rows x 8 columns]"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "yd_articles['GSM'] = yd_articles['construction'].str.extract(r'([\\d]{3}[.][\\d]?)$.\\$')\n",
+    "yd_articles['GSM'] = yd_articles['construction'].str.extract(r'-(\\d{3}\\.?\\d?)\\s+')\n",
     "yd_articles"
    ]
   },
