weave extraction test

--- a/main.ipynb
+++ b/main.ipynb
@@ -5071,32 +5071,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 143,
    "id": "504e028f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "yd_articles['Warp'] = yd_articles['construction'].str.extract(r'^([0-9A-Z+\\/\\s()]*)[*]')\n",
-    "yd_articles['Weft'] = yd_articles['construction'].str.extract(r'^[0-9A-Z+\\/\\s()]*[*]([\\d\\w[+\\/\\s()]+)')\n",
+    "yd_articles['Warp'] = yd_articles['construction'].str.extract(r'^([\\d\\w\\s+\\/()]*)[*]')\n",
+    "yd_articles['Weft'] = yd_articles['construction'].str.extract(r'^[\\d\\w\\s+\\/()]*[*]([\\d\\w[+\\/\\s()]+)')\n",
     "yd_articles['EPI'] = yd_articles['construction'].str.extract(r'[-](\\d{2,3})[*]')\n",
     "yd_articles['PPI'] = yd_articles['construction'].str.extract(r'[*](\\d{2,3})[-]')\n",
     "yd_articles['Width'] = yd_articles['construction'].str.extract(r'[-*](\\d{3}\\.?\\d{0,2})-')\n",
+    "yd_articles['Weave'] = yd_articles['construction'].str.extract(r'[-*]\\d{3}\\.?\\d{0,2}[-](.+)-\\s*')\n",
     "yd_articles['GSM'] = yd_articles['construction'].str.extract(r'[-\\s](\\d{3}\\.?\\d?)[\\s$]*$')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
-   "id": "355bb9f4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# yd_articles.drop('epi-ppi', axis=1, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 144,
    "id": "28040ace",
    "metadata": {},
    "outputs": [
@@ -5129,6 +5120,7 @@
        "      <th>PPI</th>\n",
        "      <th>Width</th>\n",
        "      <th>GSM</th>\n",
+       "      <th>Weave</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -5142,6 +5134,7 @@
        "      <td>64</td>\n",
        "      <td>146</td>\n",
        "      <td>256</td>\n",
+       "      <td>2/2HBT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -5153,6 +5146,7 @@
        "      <td>58</td>\n",
        "      <td>149</td>\n",
        "      <td>365</td>\n",
+       "      <td>2/2 HBT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -5164,6 +5158,7 @@
        "      <td>56</td>\n",
        "      <td>144</td>\n",
        "      <td>320</td>\n",
+       "      <td>3/1 S TWILL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -5175,6 +5170,7 @@
        "      <td>56</td>\n",
        "      <td>144</td>\n",
        "      <td>320</td>\n",
+       "      <td>3/1 S TWILL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -5186,6 +5182,7 @@
        "      <td>56</td>\n",
        "      <td>144</td>\n",
        "      <td>320</td>\n",
+       "      <td>3/1 S TWILL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -5193,6 +5190,7 @@
        "      <td>10OE*14SPX-3/1 S TWILL</td>\n",
        "      <td>10OE</td>\n",
        "      <td>14SPX</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -5208,6 +5206,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -5219,6 +5218,7 @@
        "      <td>56</td>\n",
        "      <td>144</td>\n",
        "      <td>320</td>\n",
+       "      <td>3/1 S TWILL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -5230,6 +5230,7 @@
        "      <td>56</td>\n",
        "      <td>144</td>\n",
        "      <td>320</td>\n",
+       "      <td>3/1 S TWILL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -5241,6 +5242,7 @@
        "      <td>60</td>\n",
        "      <td>145</td>\n",
        "      <td>330</td>\n",
+       "      <td>2/2 BKT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -5252,6 +5254,7 @@
        "      <td>60</td>\n",
        "      <td>145</td>\n",
        "      <td>330</td>\n",
+       "      <td>2/2 BKT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
@@ -5263,6 +5266,7 @@
        "      <td>60</td>\n",
        "      <td>145</td>\n",
        "      <td>330</td>\n",
+       "      <td>2/2 BKT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
@@ -5274,6 +5278,7 @@
        "      <td>60</td>\n",
        "      <td>145</td>\n",
        "      <td>330</td>\n",
+       "      <td>2/2 BKT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
@@ -5285,6 +5290,7 @@
        "      <td>60</td>\n",
        "      <td>145</td>\n",
        "      <td>330</td>\n",
+       "      <td>2/2 BKT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
@@ -5296,6 +5302,7 @@
        "      <td>60</td>\n",
        "      <td>169.04</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
@@ -5305,6 +5312,7 @@
        "      <td>14SPX(70D)</td>\n",
        "      <td>NaN</td>\n",
        "      <td>60</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -5318,6 +5326,7 @@
        "      <td>60</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
@@ -5329,6 +5338,7 @@
        "      <td>46</td>\n",
        "      <td>150</td>\n",
        "      <td>290</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
@@ -5338,6 +5348,7 @@
        "      <td>10OE</td>\n",
        "      <td>NaN</td>\n",
        "      <td>46</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -5351,6 +5362,7 @@
        "      <td>46</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
@@ -5362,6 +5374,7 @@
        "      <td>46</td>\n",
        "      <td>150</td>\n",
        "      <td>290</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
@@ -5371,6 +5384,7 @@
        "      <td>10OE</td>\n",
        "      <td>NaN</td>\n",
        "      <td>44</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -5384,6 +5398,7 @@
        "      <td>64</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
@@ -5393,6 +5408,7 @@
        "      <td>30/2RGL+10SPX(70D)</td>\n",
        "      <td>NaN</td>\n",
        "      <td>64</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -5406,6 +5422,7 @@
        "      <td>46</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25</th>\n",
@@ -5415,6 +5432,7 @@
        "      <td>10C MC</td>\n",
        "      <td>NaN</td>\n",
        "      <td>34</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -5428,6 +5446,7 @@
        "      <td>54</td>\n",
        "      <td>NaN</td>\n",
        "      <td>232</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>27</th>\n",
@@ -5435,6 +5454,7 @@
        "      <td>10OE*10OE</td>\n",
        "      <td>10OE</td>\n",
        "      <td>10OE</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -5450,6 +5470,7 @@
        "      <td>62</td>\n",
        "      <td>124</td>\n",
        "      <td>239</td>\n",
+       "      <td>2/2 MATT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>29</th>\n",
@@ -5461,6 +5482,7 @@
        "      <td>50</td>\n",
        "      <td>150</td>\n",
        "      <td>294</td>\n",
+       "      <td>2/1 TWILL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>30</th>\n",
@@ -5472,6 +5494,7 @@
        "      <td>60</td>\n",
        "      <td>130</td>\n",
        "      <td>310</td>\n",
+       "      <td>3/1 TWILL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>31</th>\n",
@@ -5483,6 +5506,7 @@
        "      <td>60</td>\n",
        "      <td>130</td>\n",
        "      <td>310</td>\n",
+       "      <td>3/1 TWILL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>32</th>\n",
@@ -5494,6 +5518,7 @@
        "      <td>60</td>\n",
        "      <td>130</td>\n",
        "      <td>310</td>\n",
+       "      <td>3/1 TWILL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>33</th>\n",
@@ -5505,6 +5530,7 @@
        "      <td>60</td>\n",
        "      <td>130</td>\n",
        "      <td>310</td>\n",
+       "      <td>3/1 TWILL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>34</th>\n",
@@ -5516,6 +5542,7 @@
        "      <td>60</td>\n",
        "      <td>130</td>\n",
        "      <td>310</td>\n",
+       "      <td>3/1 TWILL</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -5559,45 +5586,45 @@
        "33    110195   10OE+10MC*14SPX-78*60-130-3/1 TWILL-310 $     10OE+10MC   \n",
        "34    110195   10OE+10MC*14SPX-78*60-130-3/1 TWILL-310 $     10OE+10MC   \n",
        "\n",
-       "                  Weft  EPI  PPI   Width  GSM  \n",
-       "0                1/20    68   64     146  256  \n",
-       "1                 10OE   80   58     149  365  \n",
-       "2                14SPX   79   56     144  320  \n",
-       "3                14SPX   79   56     144  320  \n",
-       "4                14SPX   79   56     144  320  \n",
-       "5                14SPX  NaN  NaN     NaN  NaN  \n",
-       "6                14SPX  NaN  NaN     NaN  NaN  \n",
-       "7                14SPX   79   56     144  320  \n",
-       "8                14SPX   79   56     144  320  \n",
-       "9                14SPX   78   60     145  330  \n",
-       "10               14SPX   78   60     145  330  \n",
-       "11               14SPX   78   60     145  330  \n",
-       "12               14SPX   78   60     145  330  \n",
-       "13               14SPX   78   60     145  330  \n",
-       "14          14SPX(70D)   66   60  169.04  NaN  \n",
-       "15          14SPX(70D)  NaN   60     NaN  NaN  \n",
-       "16          14SPX(70D)  NaN   60     NaN  NaN  \n",
-       "17                10OE   66   46     150  290  \n",
-       "18                10OE  NaN   46     NaN  NaN  \n",
-       "19                10OE  NaN   46     NaN  NaN  \n",
-       "20                10OE   66   46     150  290  \n",
-       "21                10OE  NaN   44     NaN  NaN  \n",
-       "22  30/2RGL+10SPX(70D)  NaN   64     NaN  NaN  \n",
-       "23  30/2RGL+10SPX(70D)  NaN   64     NaN  NaN  \n",
-       "24               10OE   NaN   46     NaN  NaN  \n",
-       "25              10C MC  NaN   34     NaN  NaN  \n",
-       "26                16OE  NaN   54     NaN  232  \n",
-       "27                10OE  NaN  NaN     NaN  NaN  \n",
-       "28               16SPX   73   62     124  239  \n",
-       "29                 10K   72   50     150  294  \n",
-       "30               14SPX   78   60     130  310  \n",
-       "31               14SPX   78   60     130  310  \n",
-       "32               14SPX   78   60     130  310  \n",
-       "33               14SPX   78   60     130  310  \n",
-       "34               14SPX   78   60     130  310  "
+       "                  Weft  EPI  PPI   Width  GSM        Weave  \n",
+       "0                1/20    68   64     146  256       2/2HBT  \n",
+       "1                 10OE   80   58     149  365      2/2 HBT  \n",
+       "2                14SPX   79   56     144  320  3/1 S TWILL  \n",
+       "3                14SPX   79   56     144  320  3/1 S TWILL  \n",
+       "4                14SPX   79   56     144  320  3/1 S TWILL  \n",
+       "5                14SPX  NaN  NaN     NaN  NaN          NaN  \n",
+       "6                14SPX  NaN  NaN     NaN  NaN          NaN  \n",
+       "7                14SPX   79   56     144  320  3/1 S TWILL  \n",
+       "8                14SPX   79   56     144  320  3/1 S TWILL  \n",
+       "9                14SPX   78   60     145  330      2/2 BKT  \n",
+       "10               14SPX   78   60     145  330      2/2 BKT  \n",
+       "11               14SPX   78   60     145  330      2/2 BKT  \n",
+       "12               14SPX   78   60     145  330      2/2 BKT  \n",
+       "13               14SPX   78   60     145  330      2/2 BKT  \n",
+       "14          14SPX(70D)   66   60  169.04  NaN          NaN  \n",
+       "15          14SPX(70D)  NaN   60     NaN  NaN          NaN  \n",
+       "16          14SPX(70D)  NaN   60     NaN  NaN          NaN  \n",
+       "17                10OE   66   46     150  290          NaN  \n",
+       "18                10OE  NaN   46     NaN  NaN          NaN  \n",
+       "19                10OE  NaN   46     NaN  NaN          NaN  \n",
+       "20                10OE   66   46     150  290          NaN  \n",
+       "21                10OE  NaN   44     NaN  NaN          NaN  \n",
+       "22  30/2RGL+10SPX(70D)  NaN   64     NaN  NaN          NaN  \n",
+       "23  30/2RGL+10SPX(70D)  NaN   64     NaN  NaN          NaN  \n",
+       "24               10OE   NaN   46     NaN  NaN          NaN  \n",
+       "25              10C MC  NaN   34     NaN  NaN          NaN  \n",
+       "26                16OE  NaN   54     NaN  232          NaN  \n",
+       "27                10OE  NaN  NaN     NaN  NaN          NaN  \n",
+       "28               16SPX   73   62     124  239     2/2 MATT  \n",
+       "29                 10K   72   50     150  294    2/1 TWILL  \n",
+       "30               14SPX   78   60     130  310    3/1 TWILL  \n",
+       "31               14SPX   78   60     130  310    3/1 TWILL  \n",
+       "32               14SPX   78   60     130  310    3/1 TWILL  \n",
+       "33               14SPX   78   60     130  310    3/1 TWILL  \n",
+       "34               14SPX   78   60     130  310    3/1 TWILL  "
       ]
      },
-     "execution_count": 140,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
