--- a/main.ipynb
+++ b/main.ipynb
@@ -5071,7 +5071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 148,
    "id": "504e028f",
    "metadata": {},
    "outputs": [],
@@ -5081,13 +5081,13 @@
     "yd_articles['EPI'] = yd_articles['construction'].str.extract(r'[-](\\d{2,3})[*]')\n",
     "yd_articles['PPI'] = yd_articles['construction'].str.extract(r'[*](\\d{2,3})[-]')\n",
     "yd_articles['Width'] = yd_articles['construction'].str.extract(r'[-*](\\d{3}\\.?\\d{0,2})-')\n",
-    "yd_articles['Weave'] = yd_articles['construction'].str.extract(r'[-*]\\d{3}\\.?\\d{0,2}[-](.+)-\\s*')\n",
+    "yd_articles['Weave'] = yd_articles['construction'].str.extract(r'[-*]\\d{3}\\.?\\d{0,2}-(.+)[-\\s]\\d{3}\\.?\\d?[\\s$]*[\\s$]')\n",
     "yd_articles['GSM'] = yd_articles['construction'].str.extract(r'[-\\s](\\d{3}\\.?\\d?)[\\s$]*$')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 149,
    "id": "28040ace",
    "metadata": {},
    "outputs": [
@@ -5338,7 +5338,7 @@
        "      <td>46</td>\n",
        "      <td>150</td>\n",
        "      <td>290</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2/2 Z TWILL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
@@ -5374,7 +5374,7 @@
        "      <td>46</td>\n",
        "      <td>150</td>\n",
        "      <td>290</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2/2 Z TWILL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
@@ -5470,7 +5470,7 @@
        "      <td>62</td>\n",
        "      <td>124</td>\n",
        "      <td>239</td>\n",
-       "      <td>2/2 MATT</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>29</th>\n",
@@ -5482,7 +5482,7 @@
        "      <td>50</td>\n",
        "      <td>150</td>\n",
        "      <td>294</td>\n",
-       "      <td>2/1 TWILL</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>30</th>\n",
@@ -5604,10 +5604,10 @@
        "14          14SPX(70D)   66   60  169.04  NaN          NaN  \n",
        "15          14SPX(70D)  NaN   60     NaN  NaN          NaN  \n",
        "16          14SPX(70D)  NaN   60     NaN  NaN          NaN  \n",
-       "17                10OE   66   46     150  290          NaN  \n",
+       "17                10OE   66   46     150  290  2/2 Z TWILL  \n",
        "18                10OE  NaN   46     NaN  NaN          NaN  \n",
        "19                10OE  NaN   46     NaN  NaN          NaN  \n",
-       "20                10OE   66   46     150  290          NaN  \n",
+       "20                10OE   66   46     150  290  2/2 Z TWILL  \n",
        "21                10OE  NaN   44     NaN  NaN          NaN  \n",
        "22  30/2RGL+10SPX(70D)  NaN   64     NaN  NaN          NaN  \n",
        "23  30/2RGL+10SPX(70D)  NaN   64     NaN  NaN          NaN  \n",
@@ -5615,8 +5615,8 @@
        "25              10C MC  NaN   34     NaN  NaN          NaN  \n",
        "26                16OE  NaN   54     NaN  232          NaN  \n",
        "27                10OE  NaN  NaN     NaN  NaN          NaN  \n",
-       "28               16SPX   73   62     124  239     2/2 MATT  \n",
-       "29                 10K   72   50     150  294    2/1 TWILL  \n",
+       "28               16SPX   73   62     124  239          NaN  \n",
+       "29                 10K   72   50     150  294          NaN  \n",
        "30               14SPX   78   60     130  310    3/1 TWILL  \n",
        "31               14SPX   78   60     130  310    3/1 TWILL  \n",
        "32               14SPX   78   60     130  310    3/1 TWILL  \n",
@@ -5624,7 +5624,7 @@
        "34               14SPX   78   60     130  310    3/1 TWILL  "
       ]
      },
-     "execution_count": 144,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5632,6 +5632,14 @@
    "source": [
     "yd_articles.head(35)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff0f8a12",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
